# papi_digitalizer

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_log.txt  docker-compose.yml  main.py  pack_repo.py  project.md  pyproject.toml  readme_last_sprint.md  recover.py  repositorio_final.md  template_mapping.json  template_mapping_old.json
src/: batch_processor.py  database.py  image_utils.py  llm_engine.py  pipeline.py  preprocessor.py  prototype_1.ipynb  schemas.py  schemas_first.py  telemetry.py  transformers.py
tools/: generate_template_mapping.py  roi_labeler.py  roi_viewer.py
